tests/getters_and_setters_disabled/getters_and_setters_disabled.exp
Error: getters_and_setters.js:6
  6:   get a() { return 4; },
       ^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:7
  7:   set b(x: number) { this.c = x; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:9
  9:   get ['d']() { return 'foo'; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ computed getters and setters are not yet supported

Error: getters_and_setters.js:10
 10:   set ['d'](x: number) {},
       ^^^^^^^^^^^^^^^^^^^^^^^ computed getters and setters are not yet supported

Error: getters_and_setters.js:14
 14:   get a(): number,
       ^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:15
 15:   set b(x: number): void,
       ^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:20
 20:   get a(): number;
       ^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:21
 21:   set b(x: number): void;
       ^^^^^^^^^^^^^^^^^^^^^^ get/set properties not yet supported

Error: getters_and_setters.js:26
 26:   get a() { return 4; }
       ^^^^^^^^^^^^^^^^^^^^^ Potentially unsafe get/set usage. Getters and setters with side effects are potentially unsafe and disabled by default. You may opt-in to using them anyway by putting `unsafe.enable_getters_and_setters=true` into the [options] section of your .flowconfig.

Error: getters_and_setters.js:27
 27:   set b(x: number) { this.c = x; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Potentially unsafe get/set usage. Getters and setters with side effects are potentially unsafe and disabled by default. You may opt-in to using them anyway by putting `unsafe.enable_getters_and_setters=true` into the [options] section of your .flowconfig.

Error: getters_and_setters.js:29
 29:   get ['d']() { return 'foo'; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ computed property keys not supported

Error: getters_and_setters.js:30
 30:   set ['d'](x: number) {}
       ^^^^^^^^^^^^^^^^^^^^^^^ computed property keys not supported


Found 12 errors
